# tuxiang-wenban

./: .gitignore  ENVIRONMENT.txt  README.md  doc_textify_cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
benchmarks/: duibitu.expected.json
doc_textify/: __init__.py  chart.py  cli.py  evaluation.py  extractors.py  layout.py  models.py  renderers.py
reports/: release_notes_v0.3.0.md  release_notes_v0.3.1.md  优化方案.md  商业级分析报告.md  测试优化报告.md  精准优化测试报告.md  视觉模型_token评估.md  项目交付总结.md  项目能力评估报告.md
scripts/: evaluate_textification.py  publish_github.py
tests/: test_evaluation.py  test_extractors.py  test_renderers.py
