[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-textify"
version = "0.1.0"
description = "Convert PDFs and images into AI-readable Markdown/TXT plus JSON metadata without vision LLMs."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
dependencies = [
    "pypdf>=4",
    "Pillow>=10",
]

[project.optional-dependencies]
ocr = []
dev = ["pytest>=8", "pyinstaller>=6"]

[project.scripts]
doc-textify = "doc_textify.cli:main"
doc-textify-eval = "scripts.evaluate_textification:main"

[tool.setuptools.packages.find]
include = ["doc_textify*"]
