[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-textify"
version = "0.3.0"
description = "Convert PDFs and images into compact AI-readable text plus JSON metadata without vision LLMs."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "doc-textify" }]
dependencies = [
    "pypdf>=4",
    "Pillow>=10",
    "pytesseract>=0.3.10",
    "pypdfium2>=4",
]

[project.optional-dependencies]
chart = ["opencv-python-headless>=4.8"]
dev = ["pytest>=8", "pyinstaller>=6"]
all = ["doc-textify[chart]"]

[project.scripts]
doc-textify = "doc_textify.cli:main"
doc-textify-eval = "scripts.evaluate_textification:main"

[tool.setuptools.packages.find]
include = ["doc_textify*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
